WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24028
Fix up Skia path changes
https://bugs.webkit.org/show_bug.cgi?id=24028
Summary
Fix up Skia path changes
Dimitri Glazkov (Google)
Reported
2009-02-19 10:38:40 PST
Changeset
http://trac.webkit.org/changeset/41064
introduced the original changes, but it wasn't complete (or completely correct). This fixes it.
Attachments
Fix up skia path changes, v1
(1.99 KB, patch)
2009-02-19 10:40 PST
,
Dimitri Glazkov (Google)
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2009-02-19 10:40:57 PST
Created
attachment 27794
[details]
Fix up skia path changes, v1 WebCore/ChangeLog | 12 ++++++++++++ .../platform/graphics/skia/GraphicsContextSkia.cpp | 2 +- WebCore/platform/graphics/skia/PathSkia.cpp | 2 +- 3 files changed, 14 insertions(+), 2 deletions(-)
Eric Seidel (no email)
Comment 2
2009-02-19 11:12:38 PST
Comment on
attachment 27794
[details]
Fix up skia path changes, v1 LGTM.
Dimitri Glazkov (Google)
Comment 3
2009-02-19 11:32:36 PST
Landed as
http://trac.webkit.org/changeset/41078
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug