2009-02-19  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24028
        Fix up Skia path changes.

        * platform/graphics/skia/GraphicsContextSkia.cpp:
        (WebCore::GraphicsContext::strokePath): Removed illegal indirection.
        * platform/graphics/skia/PathSkia.cpp:
        (WebCore::boundingBoxForCurrentStroke): Changed call name.

Canonical link: https://commits.webkit.org/33163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41078 268f45cc-cd09-0410-ab3c-d52691b4dbfc